--- a/Code/CSS/Global/Header.css
+++ b/Code/CSS/Global/Header.css
@@ -9,6 +9,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
+  max-height: 50px;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
