--- a/Code/CSS/Global/toolbar_style.css
+++ b/Code/CSS/Global/toolbar_style.css
@@ -13,8 +13,16 @@
   box-sizing: border-box; /* Include padding in the element's total width and height */
 }
 
+.hidden {
+  display: none !important; /* Hide the toolbar */
+}
+
 @media only screen and (max-width: 480px) {
   .toolbar {
     display: none; /* Hide the toolbar for phones' screens */
+  }
+
+  .toolbar.show {
+    display: flex; /* Show the toolbar when the button is clicked */
   }
 }
