Προσθήκες για το layout του Rescuer

--- a/Code/CSS/Global/pop_ups.css
+++ b/Code/CSS/Global/pop_ups.css
@@ -81,3 +81,17 @@
 .leaflet-popup-close-button:hover {
   color: red !important;
 }
+
+@media (max-width: 480px) {
+  .leaflet-popup-content-wrapper {
+    max-width: 220px;
+  }
+
+  .popup-title {
+    font-size: 24px;
+  }
+
+  .popup-content button {
+    padding: 5px;
+  }
+}
