--- a/Code/CSS/Rescuer/choose_vehicle.css
+++ b/Code/CSS/Rescuer/choose_vehicle.css
@@ -9,13 +9,10 @@ body {
 }
 
 main {
-    padding-top: 100px; /* Απόσταση από την κορυφή για να φαίνεται το περιεχόμενο κάτω από το header */
     width: 80%;
-    margin: 0 auto;
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
@@ -41,3 +38,19 @@ h2 {
     color: rgb(0, 167, 0);
   }
   
+@media (max-width: 480px) {
+    h2 {
+        text-align: center;
+        margin: 5px 0 0 0 auto;
+    }
+}
+
+table.Available_Vehicles {
+    margin: 20px 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+table.Available_Vehicles td {
+    padding: 2%;
+    text-align: left;
+}
