--- a/Code/CSS/Rescuer/map.css
+++ b/Code/CSS/Rescuer/map.css
@@ -10,12 +10,18 @@ html {
 
 main {
     display: flex;
+    margin: 2vh 0 0 0;
 }
 
 #map {
-    height: 92vh;
-    width: 70%;
+    height: 90vh;
+    width: 70vw;
     float: left;
+}
+
+.leaflet-top.leaflet-left {
+    top: 3%;
+    left: 10px;
 }
 
 .task-panel {
@@ -95,4 +101,38 @@ main {
 
 .task-panel::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+@media only screen and (max-width: 480px) {
+    main {
+        flex-direction: column;
+    }
+
+    #map {
+        width: 100%;
+        height: 40vh;
+        margin-left: 20px;
+    }
+    
+    .task-panel {
+        width: 100%;
+        height: 40vh;
+        margin: 0 0 20px 20px;
+        padding-bottom: 20px;
+    }
+
+    .task-panel h2 {
+        font-size: 24px;
+        margin: 0 0 10px 0;
+    }
+
+
+    .task-panel {
+        scrollbar-width: none;
+        /* -ms-overflow-style: none;  IE και Edge */
+    }
+
+    .task-panel::-webkit-scrollbar {
+        display: none; 
+    }
 }
