--- a/Code/CSS/Global/toolbar_style.css
+++ b/Code/CSS/Global/toolbar_style.css
@@ -1,14 +1,14 @@
 .container {
   display: flex; /* Use flexbox layout */
   padding: 0 !important;
-  margin: 70px 0 0 220px !important; /* Adjust margin for the toolbar */
+  margin: 70px 0 0 0 !important; /* Adjust margin for the toolbar */
 }
 
 .toolbar {
   background-color: #f2f2f2; /* Light gray background */
-  position: fixed; /* Fixed positioning */
+  position: sticky; /* Sticky positioning */
   top: 70px !important;
-  left: 0;
+  left: 0 !important; 
   height: calc(100vh - 70px); /* Full height minus the height of the header */
   width: 200px; /* Set a fixed width for the toolbar */
   padding: 10px; /* Padding for spacing inside the toolbar */
