--- a/Code/CSS/Global/Header.css
+++ b/Code/CSS/Global/Header.css
@@ -1,4 +1,3 @@
-/* Αφαίρεση οριζόντιας κύλισης από το σώμα */
 body {
   margin: 0;
   padding: 0;
@@ -23,7 +22,7 @@ header {
 .user-profile {
   display: flex;
   align-items: center;
-  order: -1; /* Τοποθετεί το .admin-profile πριν από τον τίτλο */
+  order: -1; /* Πάει πρώτο */
 }
 
 .user-profile img {
@@ -38,13 +37,8 @@ header {
   font-size: medium;
 }
 
-#user-options {
-  text-align: bottom;
-}
-
 .header-center {
   flex-grow: 1;
-  text-align: center;
 }
 
 header h1 {
@@ -87,11 +81,8 @@ header h1 {
 
 .hamburger-menu {
   display: none;
-  cursor: pointer;
-  flex-direction: column;
-  justify-content: space-around;
   width: 30px;
-  height: 4%;
+  height: 33px;
   z-index: 1000;
 }
 
@@ -136,15 +127,10 @@ nav a:hover {
     word-break: break-word;
   }
 
-  .admin-profile img {
-    width: 30px; /* Μείωση του μεγέθους */
-    height: 30px;
-    margin-right: 5px; /* Μείωση του διαστήματος μεταξύ της εικόνας και του κειμένου */
-  }
-
   .user-profile img {
     width: 30px;
     height: 30px;
+    margin-right: 5px;
   }
 
   .user-name {
@@ -159,43 +145,33 @@ nav a:hover {
   .hamburger-menu {
     display: block;
     padding: 2%;
-    cursor: pointer;
-    transition: 0.4s; /* Προσθήκη μετάβασης για ομαλή κίνηση */
+    transition: 0.4s;
   }
-
-  /* body.menu-open main {
-    margin-top: 20vh;
-  } */
 
   .bar {
     width: 25px;
     height: 3px;
-    background-color: #333;
     margin: 6px 1px;
   }
 
   .hamburger-menu .bar {
-    background-color: white; /* Αρχικό χρώμα */
+    background-color: white;
     transition: background-color 0.3s ease;
   }
 
   .hamburger-menu:hover .bar {
-    background-color: tan; /* Χρώμα κατά το hover */
+    background-color: tan;
   }
 
-  nav ul.hide-on-mobile {
-    display: none;
-  }
 
   nav ul {
     display: none;
-    flex-direction: column;
     width: 100%;
     background-color: #430063;
     position: absolute;
     top: 6vh;
     left: 0;
-    z-index: 998;  /* Μεγάλη τιμή z-index για να εμφανίζονται τα links πάνω από τα άλλα στοιχεία */
+    z-index: 998;
   }
   
   nav ul.show {
@@ -216,10 +192,6 @@ nav a:hover {
   }
 
   nav a {
-    margin: 0 0 0 10%;
-  }
-
-  .main.push-down {
-    margin-top: 70px; /* Το αρχικό margin είναι 0 */
+    margin: 0 0 0 12px;
   }
 }
