--- a/Code/CSS/User/offers_page_style.css
+++ b/Code/CSS/User/offers_page_style.css
@@ -9,8 +9,8 @@ body {
   
 .main {
     position: relative;
-    flex-grow: 1; /* Take up the remaining space */
-    padding: 20px; /* Padding around the content */
+    flex-grow: 1;
+    padding: 20px;
   }
 
 h2 {
@@ -31,9 +31,8 @@ h2 {
     color: red;
   }
 
-  /* Προσαρμογή του scrollbar */
 .scroll-container::-webkit-scrollbar {
-  width: 8px;  /* Πλάτος του scrollbar */
+  width: 8px;
 }
 
 .scroll-container::-webkit-scrollbar-track {
@@ -46,17 +45,17 @@ h2 {
 }
 
 .scroll-container::-webkit-scrollbar-thumb:hover {
-  background: #a8a8a8;  /* Χρώμα κατά την επιλογή */
+  background: #a8a8a8;
 }
 
 .scroll-container {
   overflow-y: auto;
-  max-height: 500px;  /* Αντιστοιχίστε αυτό με το max-height του tbody */
+  max-height: 500px;
 }
 
 table th, table td {
-  height: 50px;  /* ή όποιο ύψος επιλέξετε */
-  padding: 8px 12px;  /* Προσαρμόστε το padding αναλόγως */
+  height: 50px;
+  padding: 8px 12px;
 }
 
 #table_of_announcements{
@@ -71,12 +70,12 @@ table th, table td {
 
 .scroll-container {
     width: 100%;
-    margin-bottom: 20px; /* Προαιρετικό: Απόσταση μεταξύ των πινάκων */
+    margin-bottom: 20px;
 }
 
 
 .history-table {
     width: 100%;
-    margin-bottom: 20px; /* Προαιρετικό: Απόσταση μεταξύ των πινάκων */
+    margin-bottom: 20px;
 }
 }
