--- a/Code/CSS/Global/showbox.css
+++ b/Code/CSS/Global/showbox.css
@@ -1,6 +1,3 @@
-/* * Message's ShowBox style for various pages*/
-
-/* Στυλ για τα μηνύματα */
 .message-field {
   position: absolute;
   text-align: left;
@@ -46,14 +43,14 @@
   position: absolute;
   top: -7px;
   left: -12px;
-  width: 20px; /* Ρυθμίστε το πλάτος που σας ταιριάζει */
-  height: 20px; /* Ρυθμίστε το ύψος που σας ταιριάζει */
-  background: white; /* Ασπρόχρωμο φόντο */
+  width: 20px;
+  height: 20px;
+  background: white;
   border: 1px solid red !important;
   color: red;
   cursor: pointer;
   font-size: 15px;
-  border-radius: 50%; /* Προσθήκη στρογγυλού περιγράμματος */
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
