--- a/Code/CSS/Global/toolbars_buttons.css
+++ b/Code/CSS/Global/toolbars_buttons.css
@@ -18,7 +18,7 @@
   background-color: #5a197d;
   color: gold;
   border: none;
-  border-radius: 25px; /* Δημιουργεί στρογγυλεμένα άκρα */
+  border-radius: 25px;
   padding: 8px 16px;
   margin: 10% 2%;
   cursor: pointer;
